[metadata]
name = tomb_reflect
author = Marc Abramowitz
author_email = johna@gmail.com
summary = Add API to introspect routes for your Pyramid web app
description-file = README.rst
home-page = https://github.com/msabramo/tomb_reflect
license = MIT

[files]
packages =
    tomb_reflect

[entry_points]

[pbr]
warnerrors = True

[pytest]
norecursedirs =
    .git
    .tox
    dist
    build
    *.egg

addopts =
    -rxEfs
    --strict
    --doctest-modules
    --doctest-glob \*.rst
    --tb short
    --ignore setup.py

markers =
    unit
    integration
